--- a/blockPage.html
+++ b/blockPage.html
@@ -27,7 +27,7 @@
                   <div class="col-10">
                     <p id="ip" class="code">Original IP: </p>
                     <p id="attempt" class="code">Attempted IP: </p>
-                    <p id="url" class="code">Originating URL: </p>
+                    <p id="url" class="code">Triggered URL:: </p>
                   </div>
                 </div>
                 <a id="report" type="button" class="btn btn-light btn-lg">Report URL</a>
